@@ -1,7 +1,7 @@
 module.exports = getDocumentProtocol;
 
 function getDocumentProtocol() {
-  var protocol = global.document.location.protocol;
+  var protocol = window.document.location.protocol;
 
   // when in `file:` mode (local html file), default to `http:`
   if (protocol !== 'http:' && protocol !== 'https:') {
