@@ -6,6 +6,9 @@ UNRELEASED
     * fix: incremental wait waitTask
       will now wait 100ms * loopTickNumber * loopTickNumber
       fixes #102
+    * fix: do not use global when we know we will be in a browser
+      browserify `global` is not always `window` can be <div id="global"></div>
+      fixes #99
 
 2015-05-23 3.4.0
     * FIX: Remove debugging messages from builds
